# web-app

./: .gitignore  default.conf  docker-compose.yml  template.env
app/client/: Dockerfile  package-lock.json  package.json
app/server/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
app/server/src/: __init__.py  main.py
app/server/src/api/: __init__.py  schemas.py
app/server/src/api/v1/: __init__.py  schemas.py  service.py
app/server/src/api/v1/auth/: __init__.py  schemas.py  service.py  views.py
app/server/src/api/v1/health/: __init__.py  schemas.py  views.py
app/server/src/api/v1/services/: __init__.py
app/server/src/api/v1/services/crud/: __init__.py  service.py
app/server/src/api/v1/services/hash/: __init__.py  service.py
app/server/src/api/v1/services/jwt/: __init__.py  service.py
app/server/src/api/v1/user/: schemas.py  service.py  views.py
app/server/src/certs/: jwt-private.pem  jwt-public.pem
app/server/src/config/: __init__.py  constants.py
app/server/src/config/components/app/: __init__.py
app/server/src/config/components/cors/: __init__.py
app/server/src/config/components/database/: __init__.py
app/server/src/config/components/jwt/: __init__.py
app/server/src/config/components/redis/: __init__.py
app/server/src/config/components/swagger/: __init__.py  docs.py  redoc.py
app/server/src/database/: __init__.py  base.py  helper.py  mixins.py  models.py
app/server/src/migrations/: env.py
app/server/src/migrations/versions/: 1d95b4cbdbbe_create_users_table.py
app/server/src/server/: __init__.py
(+40 files in other folders)
